# cg_engine

./: .gitignore  CMakeLists.txt  README.md  compare.sh  easy_image.cc  easy_image.cpp  easy_image.h  engine.cc  engine.cpp  l_parser.cc  l_parser.cpp  l_renderer.cpp  l_renderer.h  primitives.cpp  primitives.h
config/: l_systems027.ini  l_systems028.ini  l_systems029.ini  stochastic.L2D  stochastic2.L2D  stochastic3.L2D
config-extra/: raytracing001.ini  raytracing002.ini
config1/: l_systems002.ini  spyrograph.L2D
config12/: test001.ini  texturing001.ini  texturing002.ini  texturing003.ini  texturing004.ini  texturing005.ini
config2/: l_systems_extra1.ini  l_systems_extra2.ini  l_systems_extra3.ini  stochastic.L2D  stochastic2.L2D
config4/: massif.out.2036  massif.out.2158  massif.out.2179  wireframes035.ini
geometry/: lines2D.cpp  lines2D.h  mesh.cpp  mesh.h
math/: color.h  mat4.cpp  mat4.h  math.cpp  math.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
src/: easy_image.cpp  easy_image.h  engine.cpp  ini_configuration.cpp  l_parser.h  l_renderer.cpp  l_renderer.h  texture.h
src/geometry/: index.cpp  index.h  light.h  lines2D.cpp  lines2D.h  mesh.cpp  mesh.h  zbuffer.cpp  zbuffer.h
src/math/: mat4.cpp  mat4.h  math.cpp  math.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
src/raytracing/: camera.cpp  camera.h  hitInfo.h  hitable.h  materials.cpp  materials.h  ray.h  sphere.cpp  sphere.h  worldParser.h
